# mcp-schema

./: .gitignore  Cargo.toml  LICENCE  README.md  WORK_NOTES.md
src/: lib.rs  main.rs  types.rs
src/types/: base.rs  cancellation.rs  client.rs  client_completion.rs  common.rs  initialization.rs  logging.rs  mod.rs  progress.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  server.rs  tools.rs
tests/: test_latest_spec.rs
