[package]
name = "mcp-schema"
version = "0.1.0"
edition = "2021"
authors = ["yonaka"]
description = "Rust port of the Model Context Protocol (MCP) schema originally written in TypeScript."
license = "MIT"
repository = "https://github.com/yonaka15/mcp-schema"
keywords = ["anthropic", "claude", "mcp", "ai", "protocol"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
